@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -55,7 +55,7 @@ public class MojoLightDelegatingSubDefinition extends PerlLightSubDefinitionElem
       if (it instanceof PerlSubDefinition) {
         List<PerlSubArgument> list = new ArrayList<>(((PerlSubDefinition)it).getSubArgumentsList());
         if (!list.isEmpty()) {
-          list.remove(0);
+          list.removeFirst();
         }
         argumentsRef.set(list);
         return false;
