@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -127,7 +127,7 @@ public final class PerlArrayValue extends PerlListValue implements Iterable<Perl
         return EMPTY_ARRAY;
       }
       if (myElements.size() == 1) {
-        PerlValue firstElement = myElements.get(0);
+        PerlValue firstElement = myElements.getFirst();
         if (firstElement.isUnknown()) {
           return UNKNOWN_VALUE;
         }
