@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -156,29 +156,33 @@ public final class PerlValuesManager {
   }
 
   private static @NotNull PerlValue computeValue(@NotNull PsiElement element) {
-    if (element instanceof PerlVariableDeclarationExpr) {
-      if (((PerlVariableDeclarationExpr)element).isParenthesized()) {
-        return PerlArrayValue.builder().addPsiElements(Arrays.asList(element.getChildren())).build();
+    switch (element) {
+      case PerlVariableDeclarationExpr declarationExpr -> {
+        if (declarationExpr.isParenthesized()) {
+          return PerlArrayValue.builder().addPsiElements(Arrays.asList(element.getChildren())).build();
+        }
+        PsiElement[] children = element.getChildren();
+        return children.length == 1 ? from(children[0]) : UNKNOWN_VALUE;
       }
-      PsiElement[] children = element.getChildren();
-      return children.length == 1 ? from(children[0]) : UNKNOWN_VALUE;
-    }
-    if (element instanceof PerlReturnExpr) {
-      PsiPerlExpr expr = ((PerlReturnExpr)element).getReturnValueExpr();
-      return expr == null ? UNDEF_VALUE : from(expr);
-    }
-    else if (element instanceof PerlVariableMixin variableMixin) {
-      PerlVariableNameElement variableNameElement = variableMixin.getVariableNameElement();
-      return variableNameElement == null ? UNKNOWN_VALUE : PerlResolveUtil.inferVariableValue(variableMixin);
-    }
-    else if (element instanceof PerlString) {
-      return PerlScalarValue.create(ElementManipulators.getValueText(element));
-    }
-    else if (element instanceof PerlImplicitVariableDeclaration implicitVariableDeclaration) {
-      return implicitVariableDeclaration.getDeclaredValue();
-    }
-    else if (element instanceof PerlMethod method) {
-      return computeValue(method);
+      case PerlReturnExpr returnExpr -> {
+        PsiPerlExpr expr = returnExpr.getReturnValueExpr();
+        return expr == null ? UNDEF_VALUE : from(expr);
+      }
+      case PerlVariableMixin variableMixin -> {
+        PerlVariableNameElement variableNameElement = variableMixin.getVariableNameElement();
+        return variableNameElement == null ? UNKNOWN_VALUE : PerlResolveUtil.inferVariableValue(variableMixin);
+      }
+      case PerlString string -> {
+        return PerlScalarValue.create(ElementManipulators.getValueText(string));
+      }
+      case PerlImplicitVariableDeclaration implicitVariableDeclaration -> {
+        return implicitVariableDeclaration.getDeclaredValue();
+      }
+      case PerlMethod method -> {
+        return computeValue(method);
+      }
+      default -> {
+      }
     }
 
     IElementType elementType = PsiUtilCore.getElementType(element);
@@ -406,8 +410,8 @@ public final class PerlValuesManager {
     PerlContextType targetContextType = PerlContextType.from(target);
     if (targetContextType == PerlContextType.SCALAR) {
       int startIndex = assignValueDescriptor.getStartIndex();
-      if (elements.size() == 1 && (PerlContextType.isScalar(elements.get(0)) || startIndex == -1)) {
-        return PerlScalarContextValue.create(from(elements.get(0)));
+      if (elements.size() == 1 && (PerlContextType.isScalar(elements.getFirst()) || startIndex == -1)) {
+        return PerlScalarContextValue.create(from(elements.getFirst()));
       }
       else if (elements.size() > 1 || PerlContextType.isList(ContainerUtil.getFirstItem(elements))) {
         return PerlArrayElementValue.create(
