@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -46,7 +46,7 @@ public class Perl5ProjectConfigurableWrapper implements UnnamedConfigurable {
   @Override
   public @Nullable JComponent createComponent() {
     if (myConfigurables.size() == 1) {
-      return myConfigurables.get(0).createComponent();
+      return myConfigurables.getFirst().createComponent();
     }
 
     JBTabbedPane tabbedPane = new JBTabbedPane();
