@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -144,7 +144,7 @@ public class PerlReadWriteAccessDetector extends ReadWriteAccessDetector {
     }
     else if (LIST_MODIFYING_EXPR.contains(parentExpressionType)) {
       List<PsiElement> children = PerlArrayUtil.collectListElements(expression);
-      if (children.size() > 0 && PsiTreeUtil.isAncestor(children.get(0), originalElement, false)) {
+      if (children.size() > 0 && PsiTreeUtil.isAncestor(children.getFirst(), originalElement, false)) {
         return Access.ReadWrite;
       }
     }
