@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -50,7 +50,7 @@ class PerlListOccurrencesCollector extends PerlIntroduceTargetOccurrencesCollect
     }
 
     boolean found = false;
-    PsiElement firstStringToSearch = myElementsToSearch.get(0);
+    PsiElement firstStringToSearch = myElementsToSearch.getFirst();
     for (int startIndex = 0; startIndex <= elementChildren.size() - myElementsToSearch.size(); startIndex++) {
       PsiElement firstChildElement = elementChildren.get(startIndex);
       if (!PerlPsiUtil.areElementsSame(firstStringToSearch, firstChildElement)) {
