@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -99,7 +99,7 @@ public abstract class GenericPerlRunConfigurationProducer<Configuration extends 
       return false;
     }
     runConfiguration.setScriptPath(GenericPerlRunConfiguration.computePathsFromVirtualFiles(targetFiles));
-    runConfiguration.setConsoleCharset(targetFiles.get(0).getCharset().displayName());
+    runConfiguration.setConsoleCharset(targetFiles.getFirst().getCharset().displayName());
     runConfiguration.setGeneratedName();
     return true;
   }
