@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -171,7 +171,7 @@ public abstract class PerlHostHandler<Data extends PerlHostData<Data, Handler>, 
     customizeFileChooser(descriptor, fileSystem);
     Ref<String> pathRef = Ref.create();
     ApplicationManager.getApplication().invokeAndWait(() -> FileChooser.chooseFiles(descriptor, null, defaultFile, chosen -> {
-      String selectedPath = chosen.get(0).getPath();
+      String selectedPath = chosen.getFirst().getPath();
       if (StringUtil.isEmpty(pathValidator.apply(selectedPath))) {
         pathRef.set(selectedPath);
       }
