@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -31,7 +31,7 @@ public interface PerlBlessExpr extends PsiPerlExpr {
    */
   default @Nullable PsiElement getReferenceExpression() {
     List<PsiElement> unpackedChildren = PerlArrayUtil.collectChildrenList(this);
-    return unpackedChildren.size() > 0 ? unpackedChildren.get(0) : null;
+    return unpackedChildren.size() > 0 ? unpackedChildren.getFirst() : null;
   }
 
   /**
