@@ -39,7 +39,6 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.fileEditor.FileEditor;
 import com.intellij.openapi.fileEditor.FileEditorManager;
 import com.intellij.openapi.module.Module;
-import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.projectRoots.impl.PerlSdkTable;
 import com.intellij.openapi.roots.ModuleRootManager;
@@ -276,7 +275,7 @@ public abstract class PerlPlatformTestCase extends HeavyPlatformTestCase {
   protected @NotNull GenericPerlRunConfiguration createOnlyRunConfiguration(@NotNull String relativePath) {
     List<ConfigurationFromContext> configurationsFromContext = getRunConfigurationsFromFileContext(relativePath);
     assertSize(1, configurationsFromContext);
-    ConfigurationFromContext configurationFromContext = configurationsFromContext.get(0);
+    ConfigurationFromContext configurationFromContext = configurationsFromContext.getFirst();
     RunConfiguration runConfiguration = configurationFromContext.getConfiguration();
     assertInstanceOf(runConfiguration, GenericPerlRunConfiguration.class);
     return (GenericPerlRunConfiguration)runConfiguration;
